--- a/game 1/index.html
+++ b/game 1/index.html
@@ -38,11 +38,12 @@
             </div>
 
         </div>
-        <div class="PreviseGameDetaBtn">Previse Game Deta</div>
+        <div class="PreviseGameDetaBtn">Previous Game Deta</div>
         <div class="PreviseGameDeta">
+            <div class="PreviseGameDetaHeading"> previous data</div>
             <div id="closeBtn"><i class="ri-close-circle-line"></i></div>
             <div class="container" id="PreviseGameDetaContainer">
-                <div class="header header">
+                <div class="header header" >
                     <div class="dateHeader">Date</div>
                     <div class="numberHeader">Total number</div>
                     <div class="TakenTimeHeader">Time taken</div>
@@ -53,15 +54,16 @@
 
 
             </div>
-            <div class="mobileContainer">
-                <div class="mobileHeader">
+            <div class="mobileContainer" style="display: none;">
+
+                <div class="mobileHeader" >
                     <div class="dateHeader">Date</div>
-                    <div class="numberHeader">Total number</div>
+                    <div class="numberHeader">Total numbers</div>
                     <div class="TakenTimeHeader">Time taken</div>
                     <div class="WrongClickHeader">Wrong clicks</div>
                 </div>
                 <div class="boxes">
-                    
+
                 </div>
             </div>
         </div>
