--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                             <div class="btn">PLAY <img src="assits/icons8-play.gif" alt=""></div>
                         </a> </div>
                 </div>
-                <div class="box"><img src="/assits/Screenshot 2023-11-29 114343.png" alt="">
+                <div class="box"><img src="assits/Screenshot 2023-11-29 114343.png" alt="">
                     <div class="inner"> <a href="game 3/index.html">
                             <div class="btn">PLAY <img src="assits/icons8-play.gif" alt=""></div>
                         </a> </div>
