--- a/game 3/index.html
+++ b/game 3/index.html
@@ -1,17 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tic Tac Toe</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <div id="container">
+        <audio src="assits/sounds/inputClickSound.mp3" id="a"></audio>
+        <audio src="assits/sounds/winSoun.mp3" id="b"></audio>
         <div class="score">
-            <div class="cross"> ❌ <span id="scoreValue">0</span> </div>
-            <div class="zero"> 0️⃣ <span id="zeroValue">0</span> </div>
+            <div class="cross"> <span class="PlayerOneName">Playerddd</span> <span><img src="/assits/athlete.png"
+                        alt=""></span> &nbsp;<span id="scoreValue">0</span>
+            </div>
+            <div class="zero"> <span class="playertowName">playertowName</span> <span><img
+                        src="/assits/soccer-player.png" src="" alt=""></span> &nbsp;<span id="zeroValue">0</span>
+            </div>
         </div>
+        <div class="playBtn">START GAME</div>
         <div class="tiktactobox">
             <div class="box"></div>
             <div class="box"></div>
@@ -28,8 +37,45 @@
             <div class="line2"></div>
             <div class="line3"></div>
             <div class="line4"></div>
+
+
+
+            <div class="loading">
+                <div class="images">
+                    <img class="plyer player-1" src="/assits/athlete.png" alt="">
+                    <img class="vsImg" src="/assits/vs.png" alt="">
+                    <img class="plyer player-2" src="/assits/soccer-player.png" alt="">
+                </div>
+                <div class="plyername">
+                    <div class="plyerOnename"><span class="PlayerOneName">Nuralam</span> <br> <br>❌</div>
+                    <div class="plyerTowname"><span class="playertowName">Nuralam</span> <br> <br><span>0️⃣</span></div>
+                </div>
+
+                <div class="loading-line">
+                    <div class="loading-line-inner"></div>
+                </div>
+            </div>
+
+            <div class="winerDisplay">
+              
+            </div>
+
         </div>
+
     </div>
+    <!-- <div class="popupContainer ">
+        <div class="askname">
+            <h3>First Player <span><img src="/assits/athlete.png" alt=""></span></h3>
+            <input type="text" name="" id="fPlyer" placeholder="Enter Nane" autofocus autocapitalize="words">
+            <h3>Second Player <span><img src="/assits/soccer-player.png" src="" alt=""></span></h3>
+            <input type="text" name="" id="sPlyer" placeholder="Enter Nane">
+            <div class="enter">Enter</div>
+        </div>
+    </div> -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.3/gsap.min.js"
+        integrity="sha512-7Au1ULjlT8PP1Ygs6mDZh9NuQD0A5prSrAUiPHMXpU6g3UMd8qesVnhug5X4RoDr35x5upNpx0A6Sisz1LSTXA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="script.js"></script>
 </body>
+
 </html>
