--- a/game 3/index.html
+++ b/game 3/index.html
@@ -10,8 +10,8 @@
 
 <body>
     <div id="container">
-        <audio src="assits/sounds/inputClickSound.mp3" id="a"></audio>
-        <audio src="assits/sounds/winSoun.mp3" id="b"></audio>
+        <audio src="/assits/sounds/inputClickSound.mp3" id="a"></audio>
+        <audio src="/assits/sounds/winSoun.mp3" id="b"></audio>
         <div class="score">
             <div class="cross"> <span class="PlayerOneName">Playerddd</span> <span><img src="/assits/athlete.png"
                         alt=""></span> &nbsp;<span id="scoreValue">0</span>
