--- a/game 3/index.html
+++ b/game 3/index.html
@@ -10,14 +10,14 @@
 
 <body>
     <div id="container">
-        <audio src="/assits/sounds/inputClickSound.mp3" id="a"></audio>
-        <audio src="/assits/sounds/winSoun.mp3" id="b"></audio>
+        <audio src="assits/sounds/inputClickSound.mp3" id="a"></audio>
+        <audio src="assits/sounds/winSoun.mp3" id="b"></audio>
         <div class="score">
-            <div class="cross"> <span class="PlayerOneName">Playerddd</span> <span><img src="/assits/athlete.png"
+            <div class="cross"> <span class="PlayerOneName">Playerddd</span> <span><img src="assits/athlete.png"
                         alt=""></span> &nbsp;<span id="scoreValue">0</span>
             </div>
             <div class="zero"> <span class="playertowName">playertowName</span> <span><img
-                        src="/assits/soccer-player.png" src="" alt=""></span> &nbsp;<span id="zeroValue">0</span>
+                        src="assits/soccer-player.png" src="" alt=""></span> &nbsp;<span id="zeroValue">0</span>
             </div>
         </div>
         <div class="playBtn">START GAME</div>
@@ -63,15 +63,15 @@
         </div>
 
     </div>
-    <!-- <div class="popupContainer ">
+    <div class="popupContainer ">
         <div class="askname">
-            <h3>First Player <span><img src="/assits/athlete.png" alt=""></span></h3>
+            <h3>First Player <span><img src="assits/athlete.png" alt=""></span></h3>
             <input type="text" name="" id="fPlyer" placeholder="Enter Nane" autofocus autocapitalize="words">
-            <h3>Second Player <span><img src="/assits/soccer-player.png" src="" alt=""></span></h3>
+            <h3>Second Player <span><img src="assits/soccer-player.png" src="" alt=""></span></h3>
             <input type="text" name="" id="sPlyer" placeholder="Enter Nane">
             <div class="enter">Enter</div>
         </div>
-    </div> -->
+    </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.3/gsap.min.js"
         integrity="sha512-7Au1ULjlT8PP1Ygs6mDZh9NuQD0A5prSrAUiPHMXpU6g3UMd8qesVnhug5X4RoDr35x5upNpx0A6Sisz1LSTXA=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
