--- a/game 3/index.html
+++ b/game 3/index.html
@@ -13,11 +13,11 @@
         <audio src="../assits/sounds/inputClickSound.mp3" id="a"></audio>
         <audio src="../assits/sounds/winSoun.mp3" id="b"></audio>
         <div class="score">
-            <div class="cross"> <span class="PlayerOneName">Playerddd</span> <span><img src="/assits/athlete.png"
+            <div class="cross"> <span class="PlayerOneName">Playerddd</span> <span><img src="../assits/athlete.png"
                         alt=""></span> &nbsp;<span id="scoreValue">0</span>
             </div>
             <div class="zero"> <span class="playertowName">playertowName</span> <span><img
-                        src="/assits/soccer-player.png" src="" alt=""></span> &nbsp;<span id="zeroValue">0</span>
+                        src="../assits/soccer-player.png" src="" alt=""></span> &nbsp;<span id="zeroValue">0</span>
             </div>
         </div>
         <div class="playBtn">START GAME</div>
@@ -42,9 +42,9 @@
 
             <div class="loading">
                 <div class="images">
-                    <img class="plyer player-1" src="/assits/athlete.png" alt="">
-                    <img class="vsImg" src="/assits/vs.png" alt="">
-                    <img class="plyer player-2" src="/assits/soccer-player.png" alt="">
+                    <img class="plyer player-1" src="../assits/athlete.png" alt="">
+                    <img class="vsImg" src="../assits/vs.png" alt="">
+                    <img class="plyer player-2" src="../assits/soccer-player.png" alt="">
                 </div>
                 <div class="plyername">
                     <div class="plyerOnename"><span class="PlayerOneName">Nuralam</span> <br> <br>❌</div>
