--- a/game 3/index.html
+++ b/game 3/index.html
@@ -56,10 +56,10 @@
                 </div>
             </div>
 
-            <div class="winerDisplay">
-              
+            <div class="winerDisplay"></div>
+            <div class="ifNotWinAnnyOne">
+                
             </div>
-
         </div>
 
     </div>
