--- a/game 3/index.html
+++ b/game 3/index.html
@@ -66,9 +66,9 @@
     <div class="popupContainer ">
         <div class="askname">
             <h3>First Player <span><img src="../assits/athlete.png" alt=""></span></h3>
-            <input type="text" name="" id="fPlyer" placeholder="Enter Nane" autofocus autocapitalize="words">
+            <input type="text" name="" id="fPlyer" placeholder="Ente First Nane" autofocus autocapitalize="words">
             <h3>Second Player <span><img src="../assits/soccer-player.png" src="" alt=""></span></h3>
-            <input type="text" name="" id="sPlyer" placeholder="Enter Nane">
+            <input type="text" name="" id="sPlyer" placeholder="Enter Second Nane">
             <div class="enter">Enter</div>
         </div>
     </div>
